--- a/project_ecommerce/ecommerce_data/templates/homepage.html
+++ b/project_ecommerce/ecommerce_data/templates/homepage.html
@@ -494,7 +494,9 @@
 				<!-- Block1 -->
 				<div class="block1 wrap-pic-w">
 					<!-- <img src="{%static 'new/images/banner-04.jpg'%}" alt="IMG-BANNER"> -->
-					<img src="{{cat.catimage.url}}" alt="IMG-BANNER">
+					<img src="{{cat.catimage.url}}" alt="IMG-BANNER" style="height: 27rem;
+					object-fit: cover;
+					">
 
 					<a href="product.html" class="block1-txt ab-t-l s-full flex-col-l-sb p-lr-38 p-tb-34 trans-03 respon3">
 						<div class="block1-txt-child1 flex-col-l">
